--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="text text-description">...</p>
     <div class="day-grid">
         <div class="day-card">
-            <p class="text text-day-name">...</p>
+            <p class="text text-day-name">Вт</p>
             <div class="text-day-number day-today">...</div>
         </div>
         <div class="day-card">
