--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="day-grid">
         <div class="day-card">
             <p class="text text-day-name">Вт</p>
-            <div class="text-day-number day-today">...</div>
+            <div class="text-day-number day-today">28</div>
         </div>
         <div class="day-card">
-            <p class="text text-day-name">...</p>
-            <div class="text-day-number selected">...</div>
+            <p class="text text-day-name">Ср</p>
+            <div class="text-day-number selected">29</div>
         </div>
     </div>
     <p class="text text-day-full-name">...</p>
