--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="..." alt="arrow" class="img-arrow-left"/>
         <p class="text text-title">...</p>
     </div>
-    <p class="text text-description">...</p>
+    <p class="text text-description">Февраль</p>
     <div class="day-grid">
         <div class="day-card">
             <p class="text text-day-name">Вт</p>
@@ -27,11 +27,11 @@
             <div class="text-day-number selected">29</div>
         </div>
     </div>
-    <p class="text text-day-full-name">...</p>
+    <p class="text text-day-full-name">Время</p>
     <hr class="hr"/>
     <div class="time-grid">
-        <div class="time-card"><p class="text time-card-title">...</p></div>
-        <div class="time-card selected"><p class="text time-card-title">...</p></div>
+        <div class="time-card"><p class="text time-card-title">10:48</p></div>
+        <div class="time-card selected"><p class="text time-card-title">11:11</p></div>
         
     </div>
 </div>
