--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body class="body">
 <div class="container">
     <div class="header">
-        <img src="..." alt="arrow" class="img-arrow-left"/>
-        <p class="text text-title">...</p>
+        <img src="" alt="arrow" class="img-arrow-left"/>
+        <p class="text text-title">Зайнуллина Элиза Ильгизовна</p>
     </div>
     <p class="text text-description">Февраль</p>
     <div class="day-grid">
