--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
 <div class="container">
     <div class="header">
-        <img src="<svg width="12" height="20" viewBox="0 0 12 20" fill="none" xmlns="http://www.w3.org/2000/svg">" alt="arrow" class="img-arrow-left"/>
+        <img src="svg width="12" height="20" viewBox="0 0 12 20" fill="none" xmlns="http://www.w3.org/2000/svg"" alt="arrow" class="img-arrow-left"/>
         <p class="text text-title">Зайнуллина Элиза Ильгизовна</p>
     </div>
     <p class="text text-description">Февраль</p>
