--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <img src="<svg width="12" height="20" viewBox="0 0 12 20" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M9.62508 17.7085L1.91675 10.0002L9.62508 2.29183" stroke="black" stroke-width="3.08333" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>"/>
+</svg>"
         <p class="text text-title">Зайнуллина Элиза Ильгизовна</p>
     </div>
     <p class="text text-description">Февраль</p>
